Initial notes on javascript, reference w3schools - update 11

--- a/JavaScript/style.css
+++ b/JavaScript/style.css
@@ -1,19 +1,21 @@
-body { background-color: #48A; }
+body { background-color: #FFF; }
 pre { 
 	margin: 20px; padding: 30px; 
-	border: solid 1px #D28;
-	background: #EEE; color: #444;
+	border: groove 1px #BBB;
+	background: rgb(225, 225, 200, .4); 
+	color: #444;
 	font-family: Consolas; font-size: 110%; 
 }
 div { 
 	margin: 20px; padding: 20px; 
 	height: 30px;
-	border: solid 1px #D28;
-	background: #EEE; color: #444;
+	border: groove 1px #BBB;
+	background: rgb(225, 225, 200, .4); 
+	color: #444;
 }
 div a { 
 	float: right; 
-	background-color: #DDD; border: 2px groove #FFF;
+	background-color: #DDD; border: groove 1px #CCC;
 	margin: 0px 5px; padding: 5px 25px;
 	text-decoration: none; font-family: Consolas; font-size: 90%; color: #444;
 }
@@ -21,6 +23,7 @@ div a:hover {
 	background-color: #888;
 	border: 2px groove #999;
 	color: #EEE;
+	font-weight: bold;
 }
 div h1 {
 	width: 40%;
